@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-08-03T01:38:41Z",
+  "timestamp" : "2022-08-03T16:21:39Z",
   "count_outdated" : 427,
   "uniques_outdated" : 246,
-  "count" : 462,
+  "count" : 461,
   "uniques" : 263,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-07-21T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-08-02T00:00:00Z",
       "count": 4,
       "count_minmax": [ 1, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
