@@ -1,11 +1,11 @@
 {
-  "count": 35,
-  "uniques": 4,
+  "count": 34,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-07-21T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-08-02T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
